--- a/index copy.html
+++ b/index copy.html
@@ -42,8 +42,6 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
@@ -107,14 +105,14 @@
 
 
 
-  
+
 
     <!-- Team -->
     <section class="bg-light" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+            <h2 class="section-heading text-uppercase">Our Team</h2>
             <h3 class="section-subheading text-muted">Cut from the same cloth.</h3>
           </div>
         </div>
@@ -234,7 +232,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Reach out today to meet up for some coffee.</h3>
+            <h3 class="section-subheading text-muted">Reach out today, we'll treat you to coffee.</h3>
           </div>
         </div>
         <div class="row">
