--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,6 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
@@ -113,7 +111,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+            <h2 class="section-heading text-uppercase">Our Team</h2>
             <h3 class="section-subheading text-muted">Cut from the same cloth.</h3>
           </div>
         </div>
@@ -166,7 +164,7 @@
               </ul>
             </div>
           </div>
-        
+
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
@@ -210,7 +208,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Reach out today to meet up for some coffee.</h3>
+            <h3 class="section-subheading text-muted">Reach out today, we'll treat you to coffee.</h3>
           </div>
         </div>
         <div class="row">
