updated social links

--- a/index copy.html
+++ b/index copy.html
@@ -124,7 +124,7 @@
               <p class="text-muted">Business Development</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/david-mcdonnell-8194308/">
                     <i class="fa fa-twitter"></i>
                   </a>
                 </li>
