--- a/public/index.html
+++ b/public/index.html
@@ -123,17 +123,17 @@
               <p class="text-muted">Business Development</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://twitter.com/BridgetMcDee">
                     <i class="fa fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.facebook.com/bridget.mcdonnell.98">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/bridget-mcdonnell-43237790/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
@@ -147,17 +147,12 @@
               <p class="text-muted">CEO</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.facebook.com/david.mcdonnell.90">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/david-mcdonnell-8194308/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
