updated social footer

--- a/public/index.html
+++ b/public/index.html
@@ -122,10 +122,6 @@
               <h4>Bridget McDonnell</h4>
               <p class="text-muted">Business Development</p>
               <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="https://twitter.com/BridgetMcDee">
-                    <i class="fa fa-twitter"></i>
-                  </a>
                 </li>
                 <li class="list-inline-item">
                   <a href="https://www.facebook.com/bridget.mcdonnell.98">
@@ -252,17 +248,7 @@
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/david-mcdonnell-8194308/">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
