updated linkedin link at footer

--- a/public/index.html
+++ b/public/index.html
@@ -222,7 +222,7 @@
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/david-mcdonnell-8194308/">
+                <a href="https://www.linkedin.com/company/11376529/">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
