updates to team

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
   <head>
+
     <link rel="icon"  href="https://image.ibb.co/j8DbXw/lightningbolt.png" type="image/x-icon"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -118,17 +119,17 @@
           <div class="col-sm-6">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/bridget-linkedin.jpg" alt="">
-              <h4>Bridget McDonnell</h4>
-              <p class="text-muted">Business Development</p>
+              <h4>David McDonnell</h4>
+              <p class="text-muted">CEO</p>
               <ul class="list-inline social-buttons">
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://www.facebook.com/bridget.mcdonnell.98">
+                  <a href="https://www.facebook.com/david.mcdonnell.90">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/bridget-mcdonnell-43237790/">
+                  <a href="https://www.linkedin.com/in/david-mcdonnell-8194308/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
@@ -138,16 +139,17 @@
           <div class="col-sm-6">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/dad-linkedin.jpg" alt="">
-              <h4>David McDonnell</h4>
+              <h4>Bridget McDonnell</h4>
               <p class="text-muted">CEO</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="https://www.facebook.com/david.mcdonnell.90">
+                  <a href="https://www.facebook.com/bridget.mcdonnell.98">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/david-mcdonnell-8194308/">
+                  <a href="
+                  https://www.linkedin.com/in/bridget-mcdonnell-43237790/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
