--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/bridget-linkedin.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/dad-linkedin.jpg" alt="">
               <h4>David McDonnell</h4>
               <p class="text-muted">CEO</p>
               <ul class="list-inline social-buttons">
@@ -138,9 +138,9 @@
           </div>
           <div class="col-sm-6">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/dad-linkedin.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/bridget-linkedin.jpg" alt="">
               <h4>Bridget McDonnell</h4>
-              <p class="text-muted">CEO</p>
+              <p class="text-muted">Business Development</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://www.facebook.com/bridget.mcdonnell.98">
@@ -148,8 +148,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="
-                  https://www.linkedin.com/in/bridget-mcdonnell-43237790/">
+                  <a href="https://www.linkedin.com/in/bridget-mcdonnell-43237790/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
