updated leadership team

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             </li>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+              <a class="nav-link js-scroll-trigger" href="#team">Leadership</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -81,7 +81,7 @@
               <i class="fa fa-search fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Search</h4>
-            <p class="text-muted">The first step is a quick look at your bill to see what you're spending.</p>
+            <p class="text-muted">The first step is looking at your bill to see what you're spending.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -111,12 +111,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Team</h2>
-            <h3 class="section-subheading text-muted">Cut from the same cloth.</h3>
+            <h2 class="section-heading text-uppercase">Leadership</h2>
+            <!-- <h3 class="section-subheading text-muted">Cut from the same cloth.</h3> -->
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-12">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/dad-linkedin.jpg" alt="">
               <h4>David McDonnell</h4>
@@ -136,7 +136,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-sm-6">
+          <!-- <div class="col-sm-6">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/bridget-linkedin.jpg" alt="">
               <h4>Bridget McDonnell</h4>
@@ -154,7 +154,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
 
         </div>
         <div class="row">
