added fb chat icon

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="assets/css/main.css" />
+  	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   </head>
 
   <body id="page-top">
@@ -125,12 +126,13 @@
                 </li>
                 <li class="list-inline-item">
                   <a href="https://www.facebook.com/david.mcdonnell.90">
-                    <i class="fa fa-facebook"></i>
+                    <i class="fab fa-facebook-square"></i>
+
                   </a>
                 </li>
                 <li class="list-inline-item">
                   <a href="https://www.linkedin.com/in/david-mcdonnell-8194308/">
-                    <i class="fa fa-linkedin"></i>
+                    <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
               </ul>
@@ -176,7 +178,9 @@
             <h2 class="section-heading text-uppercase">Contact</h2>
             <h3 class="section-subheading text-muted">Reach out now with any questions.</h3>
             <div class="col-sm-12">
-              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://m.me/1316151181824965">Connect now</a>
+              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://m.me/1316151181824965">
+                <i class="fab fa-facebook-messenger fa-2x"> <br>
+                </i>Chat</a>
             </div>
           </div>
         </div>
@@ -195,7 +199,7 @@
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/company/11376529/">
-                  <i class="fa fa-linkedin"></i>
+                  <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
             </ul>
